added form header

--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -1,8 +1,9 @@
-<aw-wizard>
 
-  <div class="neon-wizard-container row">
+<aw-wizard style="width: 100%;">
+
+  <div   class="neon-wizard-container row">
     <div class="col-1"></div>
-      <aw-wizard-step stepTitle="intro" class="col-4 step-container">
+      <aw-wizard-step stepTitle="intro" class="col-5 step-container">
         <h5 class="neon-wizard-header">Faîtes votre choix</h5>
         <div class="illustration"><span></span></div>
         <div class="neon-wizard-btn-container">
