--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,4 +2,7 @@
     font-family: 'Nunito', sans-serif;
 background-color: #000b31;
 height: 100vh;
+display: flex;
+flex-direction: column;
+justify-content: space-around;
  }
