--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,5 +4,5 @@ background-color: #000b31;
 height: 100vh;
 display: flex;
 flex-direction: column;
-justify-content: space-around;
+justify-content: flex-start;
  }
