--- a/src/app/form-header/form-header.component.html
+++ b/src/app/form-header/form-header.component.html
@@ -4,7 +4,8 @@
       <div class="row">
           <h1 class='main-title col-8'>Créer votre néon sur mesure personalisé</h1>
           <div class ="subtitle col-10">
-              <span class="row">Transformez vos idées géniales en idées lumineuses ! C'est à vous avec le néon sur mesure en ligne</span>
+              <span class="row">Transformez vos idées géniales en idées lumineuses !
+              </span>
                   <span class="row"> Un visuel, un logo, un nom ou encore une phrase ?</span>
                   <span class="row">C'est à vous avec le néon sur mesure en ligne</span>
           </div>
