--- a/src/app/form-header/form-header.component.scss
+++ b/src/app/form-header/form-header.component.scss
@@ -13,5 +13,7 @@
 .main-title {
     color: white;
     font-family: Nunito-Black, sans-serif;  
-
+    text-align: center;
+    letter-spacing: 0.4px;
+    font-size: 3em;
 }   
