--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,11 +21,11 @@
         border-radius: 25px;
         color: black;
         background-color: #f4cc20;
-        outline: none;
+        outline: none !important;
         min-height: 35px;
         border: none;
-        font-size: 12px;
-        font-family: 'Nunito', sans-serif;
+        font-size: 1rem;
+        font-family: Mukta-Bold, sans-serif;
         cursor: pointer;
 
         letter-spacing: 0.4px;
@@ -40,11 +40,11 @@
     border-radius: 25px;
     color: black;
     background-color: whitesmoke;
-    outline: none;
+    outline: none !important;
     min-height: 35px;
     border: 1.2px solid  #f4cc20;
-    font-size: 12px;
-    font-family: 'Nunito', sans-serif;
+    font-size: 1rem;
+    font-family: Mukta-Bold, sans-serif;
     cursor: pointer;
     letter-spacing: 0.4px;
     border-radius: 45px;
@@ -54,3 +54,10 @@
 
 // #000b31
 // font-family: 'Mukta', sans-serif;
+
+.npb {
+  padding-bottom: 0 !important;
+}
+.npt {
+  padding-top: 0 !important;
+}
