--- a/src/app/form-header/form-header.component.html
+++ b/src/app/form-header/form-header.component.html
@@ -1,14 +1,12 @@
-<div class="row">
-    <div class="col-1"></div>
-    <div class="col-6">
+
       <div class="row">
-          <h1 class='main-title col-8'>Créer votre néon sur mesure personalisé</h1>
-          <div class ="subtitle col-10">
+          <div class='col-2'></div>
+          <h1 class='main-title col-8'>Transformez vos idées en néon</h1>
+          <div class='col-2'></div>
+          <!-- <div class ="subtitle col-10">
               <span class="row">Transformez vos idées géniales en idées lumineuses !
               </span>
                   <span class="row"> Un visuel, un logo, un nom ou encore une phrase ?</span>
                   <span class="row">C'est à vous avec le néon sur mesure en ligne</span>
-          </div>
+          </div> -->
          
-    </div>
-</div>
