--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -1,3 +1,8 @@
+*, *:before, *:after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 .neon-wizard-container {
     width: 100%;
     margin-top: 5%;
@@ -7,10 +12,10 @@
     display: flex;
     flex-direction: column;
     background-color: white;
-    justify-content: space-between;
-    border-radius: 15px;
+    justify-content: space-around   ;
+    border-radius: 7px;
     padding-left: 50px;
-    height: 500px;
+    height: 275px;
     padding-right: 50px; 
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
@@ -48,10 +53,10 @@
     text-align: center;
 }
 .neon-wizard-header {
-
+    margin-top: 20px;
     font-family: Nunito-Black, sans-serif;
     color: #000B31;
-
+    flex:1;
 }
 .illustration {
     border-radius: 15px;
@@ -66,15 +71,34 @@
 
 .neon-wizard-btn-container {
     display: flex;
-    justify-content: center;
+        justify-content: space-around;
+        flex:3;
 
+}
+
+.form-btn {
+height: 100px;
+border: none;
+
+font-family: Mukta-Bold, sans-serif;
+font-size: 1.5em;
+border-radius: 10px;
+letter-spacing: 0.8px;
+background-color: white;
+box-shadow: 0 0 6px 2px rgba(0,0,0,.1);
+cursor: pointer;
+outline: none;}
+
+.form-btn:hover {
+    transform: scale(1.1);
 }
 
 .neon-wizard-btn-container > button {
 margin: 10px;
 }
 .steps-indicator {
-    display: none !important;
+position: absolute;
+top: 60%;
 }
 
 .form-style-container {
@@ -90,7 +114,225 @@ margin: 10px;
     background-color: #D5D5D5;
     cursor: pointer;
 }
+.form-style-container-small {
+    width: 70%;
+    display: flex;
+    justify-content: space-around;
+    padding-top: 15px;
+    align-self: center;
+}
+
+.style-item-small {
+    width: 45%;
+    border-radius: 15px;
+    height: 10vh;
+    background-color: #D5D5D5;
+    cursor: pointer;
+    text-align: center;
+}
 
 .yellow-selected {
-    border: 1px solid #F4CC20;
+    border: 1.5px solid #F4CC20;
 }
+
+.size-container {
+    display: flex;
+    width: 100%;
+}
+.circle-cont {
+    .circle {
+        height: 0;
+        width: 100%;
+        display: block;
+        padding: calc(50% - 2px) 0;
+        line-height: 0;
+        border-radius: 50%;
+        background-size: cover;
+        background-color: #D5D5D5;
+        margin: 5px	;
+        background-position: 50%;
+        text-align: center;
+cursor: pointer;        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+        
+    }
+}
+
+
+
+.size-container {
+	&:after {
+		content: "";
+		clear: both;
+		display: table;
+	}
+	.col {
+		width: 100%;
+		float: left;
+		padding: 20px;
+		
+		@media (min-width:450px) {
+			width: 50%;
+		}
+	}
+}
+
+input[type="checkbox"] { 
+    position: absolute;
+    opacity: 0;
+}   
+
+
+input[type="checkbox"].ios-switch + div {
+    vertical-align: middle;
+    width: 40px;    height: 20px;
+    border: 1px solid rgba(0,0,0,.4);
+    border-radius: 999px;
+    background-color: rgba(0, 0, 0, 0.1);
+    -webkit-transition-duration: .4s;
+    -webkit-transition-property: background-color, box-shadow;
+    box-shadow: inset 0 0 0 0px rgba(0,0,0,0.4);
+    margin: 15px 1.2em 15px 2.5em;
+}
+
+/* Checked Track (Blue) */
+input[type="checkbox"].ios-switch:checked + div {
+    width: 40px;
+    background-position: 0 0;
+    background-color: #F4CC20;
+    border: 1px solid black;
+    box-shadow: inset 0 0 0 10px #F4CC20;
+}
+
+
+/* Normal Knob */
+input[type="checkbox"].ios-switch + div > div {
+    float: left;
+    width: 18px; height: 18px;
+    border-radius: inherit;
+    background: #ffffff;
+    -webkit-transition-timing-function: cubic-bezier(.54,1.85,.5,1);
+    -webkit-transition-duration: 0.4s;
+    -webkit-transition-property: transform, background-color, box-shadow;
+    -moz-transition-timing-function: cubic-bezier(.54,1.85,.5,1);
+    -moz-transition-duration: 0.4s;
+    -moz-transition-property: transform, background-color;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3), 0px 0px 0 1px rgba(0, 0, 0, 0.4);
+    pointer-events: none;
+    margin-top: 1px;
+    margin-left: 1px;
+}
+
+label {
+    margin-bottom:  0 !important    ;
+}
+
+.tailleperso {
+    align-self: center;
+    font-family: Mukta-Regular, sans-serif;
+}
+/* Checked Knob (Blue Style) */
+input[type="checkbox"].ios-switch:checked + div > div {
+    -webkit-transform: translate3d(20px, 0, 0);
+    -moz-transform: translate3d(20px, 0, 0);
+    background-color: #ffffff;
+}
+
+
+
+
+.main{
+    margin: 0 auto;
+    flex: 2;
+  }
+  
+  
+  
+
+  
+
+  
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    justify-content: space-around;  
+    padding: 0;
+  }
+  .card_btn {
+    border-radius: 25px;
+    color: black;
+    background-color: #f4cc20;
+    outline: none !important;
+    min-height: 35px;
+    border: none;
+    font-size: 1.12rem;
+    font-family: Mukta-Bold, sans-serif;
+    cursor: pointer;
+    height: 42px;
+    letter-spacing: 0.4px;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    width: 80%;
+    align-self: center;
+}
+  
+  .cards_item {
+    display: flex;
+    padding: 1rem;
+    height: 100%;
+    border-radius: 15px;
+    border: 1px solid black;
+    background-color: white;
+    text-align: center;
+  }
+  
+  @media (min-width: 40rem) {
+    .cards_item {
+      width: 45%;
+    }
+  }
+  
+  @media (min-width: 30rem) {
+    .cards_item {
+    //   width: 33.333 %;
+    }
+  }
+  
+  .card {
+    background-color: white;
+    border-radius: 0.25rem;
+    box-shadow: 0 20px 40px -14px white;
+    display: flex;
+    border: none !important;
+    flex-direction: column;
+    overflow: hidden;
+  }
+  
+  .card_content {
+    height: 100%    ;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+  }
+  
+  .card_title {
+    color: #000B31;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    font-family: Nunito-Black, sans-serif;
+    margin: 0px;
+  }
+  
+  .card_text {
+    color: #000B31;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    font-size: 1.1rem;
+    font-family: Muktar-Regular , sans-serif;
+    margin-bottom: 1.25rem;    
+    font-weight: 400;
+  }
