--- a/src/app/neon-form/neon-form.component.html
+++ b/src/app/neon-form/neon-form.component.html
@@ -4,9 +4,9 @@
   <div   class="neon-wizard-container row">
     <div class="col-3"></div>
       <aw-wizard-step stepTitle="" class="col-6 step-container">
-            <h4 class="neon-wizard-header ">Faîtes votre choix</h4>
+            <h4 class="neon-wizard-header flex1">Faîtes votre choix</h4>
 
-                  <div class="neon-wizard-btn-container">
+                  <div class="neon-wizard-btn-container flex3 ">
             <button type="button" class="form-btn col-5" (click)="onCompleteStep(0, 'text', null)" awNextStep>TEXTE</button>
             <button type="button" class="form-btn  col-5" (click)="onCompleteStep(0, 'image', null)" awNextStep>IMAGE</button>
         </div>
@@ -15,32 +15,19 @@
          </aw-wizard-step>
          <aw-wizard-step stepTitle="textOrImage" class="col-6 step-container">
            <div *ngIf="userChoices[0] === 'text'">
-              <div class='item-container'>
                   <div class="neon-wizard-header"><h4>Ecrivez votre texte</h4></div>
-                  <input (keyup)="onChangeTextTitle($event.target.value)" placeholder="Britney la Salope" class="basic-input col-10 centered"/>
-              </div>  
+                  <input (keyup)="onChangeTextTitle($event.target.value)" placeholder="Votre texte " [value]="textInput"  class="basic-input pb5  wizard-element"/>
 
-              <div class='item-container'>
-                  <div class="neon-wizard-header"><h4>Choisissez votre style</h4></div>
-                  <div class="form-style-container">  
-                      <div (click)="styleSelected = 1" [ngClass]="{'style-item yellow-selected': styleSelected===1, 'style-item':styleSelected!=='2' }" ></div>
-                      <div (click)="styleSelected = 2" [ngClass]="{'style-item yellow-selected': styleSelected===2, 'style-item':styleSelected  !=='1' }"  ></div>
-                  </div>
-              </div>  
            </div>
            <div *ngIf="userChoices[0] === 'image'">
-                  <div class='item-container'>
                       <div class="neon-wizard-header"><h4>Importer votre image</h4></div>
-                      <input (change)="onSelectFile($event)" type="file"  placeholder="" class="basic-input col-10 centered"/>
+                      <input (change)="onSelectFile($event)" type="file"  placeholder="" class="basic-input"/>
                
-                  </div>  
 
-                  <div class='item-container'>
                       <div class="neon-wizard-header"><h4>Une info en particulier à nous donner ?</h4></div>
-                      <textarea (keyup)="onChangeAdditionnalInfo($event.target.value)" placeholder="" class="large-input col-10 centered">
+                      <textarea (keyup)="onChangeAdditionnalInfo($event.target.value)" [value]="imageAdditionalInfo" placeholder="" class="large-input">
 
                         </textarea>               
-                  </div>  
         
             </div>      
 
@@ -53,9 +40,15 @@
           </div>
  
          </aw-wizard-step> 
-         <aw-wizard-step stepTitle="format" class="col-6 step-container">
+         <aw-wizard-step *ngIf="userChoices[0] === 'text'" stepTitle="" class="col-6 step-container">
           
-          <div class='item-container npb'>
+                  <div class="neon-wizard-header"><h4>Choisissez votre style</h4></div>
+                  <div class="form-style-container pb5">  
+                      <div (click)="styleSelected = 0" [ngClass]="{'style-item yellow-selected': styleSelected===0, 'style-item':styleSelected!=='0' }" ></div>
+                      <div (click)="styleSelected = 1" [ngClass]="{'style-item yellow-selected': styleSelected===1, 'style-item':styleSelected!=='1' }" ></div>
+                      <div (click)="styleSelected = 2" [ngClass]="{'style-item yellow-selected': styleSelected===2, 'style-item':styleSelected  !=='2' }"  ></div>
+                  </div>
+          <!-- <div class='item-container npb'>
             <div class="neon-wizard-header"><h4>Choisissez votre format</h4></div>
             <div class="row">
                 <label><input type="checkbox" class="ios-switch"  /><div><div></div></div></label>
@@ -63,19 +56,22 @@
             </div>
   
 
-        </div>  
-        <div class='item-container npt npb  row'>
+        </div>   -->
+
+
+        <!-- <div class='item-container npt npb  row'> -->
 
                 
-              <div class="size-container row">
+              <!-- <div class="size-container row">
                  <div  class="circle-cont col" (click)="selectedFormatSize = i" *ngFor="let format of formatSizes;  let i = index"   >
                     <div [ngClass]="{'circle yellow-selected': selectedFormatSize===i, 'circle':selectedFormatSize!=='2' }">{{format.size}}</div>
                     
-                  <!-- <div class=format-subtitle>{{format.width}}</div> -->
+                 <div class=format-subtitle>{{format.width}}</div> 
                  </div>
 
-              </div>
-      </div>
+              </div></div> -->
+
+<!-- 
         <div class='item-container npt npb'>
             <div class="neon-wizard-header"><h4>Choisissez votre support</h4></div>
           <div class="form-style-container-small">    
@@ -88,51 +84,82 @@
                     <span  style='position: relative; top: 40%'> Image support detournée</span>
               </div>
           </div>  
-      </div>
+      </div> -->
            <div class="neon-wizard-btn-container row">
               <button  class="prev-btn col-3" type="button" awPreviousStep>Précedent</button>
               <button class="next-btn col-3" type="button" awNextStep>Suivant</button>
           </div>
 
          </aw-wizard-step>
+         <aw-wizard-step *ngIf="userChoices[0] === 'text'" stepTitle="colors" class="col-6 step-container">
+           
+            <div class="neon-wizard-header"><h4>Choisissez une ou plusieurs couleurs</h4></div>
+                
+            <div class="wrapper">
+                <div class="item-list">
+                  <ul>
+                    <li><div class="inner-circle"></div></li>
+                    <li><div class="inner-circle"></div></li>
+                    <li><div class="inner-circle"></div></li>
+                    <li><div class="inner-circle"></div></li>
+                    <li><div class="inner-circle"></div></li>
+                    <li><div class="inner-circle"></div></li>
+                    <li><div class="inner-circle"></div></li>
+                    <li><div class="inner-circle"></div></li>
+
+                  </ul>
+                </div>
+              </div>
+     
+ 
+            <div class="neon-wizard-btn-container">
+               <button class="prev-btn col-3" type="button" awPreviousStep>Précedent</button>
+               <button class="next-btn col-3" type="button" awNextStep>Suivant</button>
+
+           </div>
+ 
+          </aw-wizard-step>
          <aw-wizard-step stepTitle="format" class="col-6 step-container">
            
-            <div class='item-container npb'>
-                <div class="neon-wizard-header"><h2>Pour Faire Briller</h2></div>
-            </div>  
-            <div class="form-style-container main">    
-                    <ul class="cards">
+            <div class="neon-wizard-header"><h4>Choisissez votre format</h4></div>
+           <div class="size-container row">
+                 <div  class="circle-cont col" (click)="selectedFormatSize = i" *ngFor="let format of formatSizes;  let i = index"   >
+                    <div [ngClass]="{'circle yellow-selected': selectedFormatSize===i, 'circle':selectedFormatSize!=='2' }">{{format.size}}</div>
                     
-                      <li class="cards_item">
-                        <div class="card">
-                          <div class="card_content">
-                            <h2 class="card_title">Un projet personnel</h2>
-                            <p class="card_text">Créer votre compte gratuitement pour obtenir votre dessin technique</p>
-                            <button class=" card_btn">Créer mon compte</button>
-                          </div>
-                        </div>
-                      </li>
-                      
-                        <li class="cards_item">
-                        <div class="card">
-                          <div class="card_content">
-                            <h2 class="card_title">Un projet professionnel</h2>
-                            <p class="card_text">Vous avez un projet de décoration et souhaitez booster votre visibilité ? Suivez le guide !</p>
-                            <button class=" card_btn">Demander mon devis</button>
-                          </div>
-                        </div>
-                      </li>
-                      
-                      
-                    </ul>
-                  
-            </div>  
+                 <!-- <div class=format-subtitle>{{format.width}}</div>  -->
+                 </div>
+
+              </div>
+    
 
            <div class="neon-wizard-btn-container">
               <button class="prev-btn col-3" type="button" awPreviousStep>Précedent</button>
+              <button class="next-btn col-3" type="button" awNextStep>Suivant</button>
           </div>
 
          </aw-wizard-step>
+         <aw-wizard-step stepTitle="" class="col-6 step-container">
+            <h4 class="neon-wizard-header flex1">Choisissez votre support</h4>
+
+                  <div class="neon-wizard-btn-container flex3 ">
+            <button type="button" class="form-btn  col-5" (click)="onCompleteStep(0, 'text', null)" awNextStep>Image détouré</button>
+            <button type="button" class="form-btn  col-5" (click)="onCompleteStep(0, 'image', null)" awNextStep>Image standard</button>
+        </div>
+  
+        
+         </aw-wizard-step>
+
+         <aw-wizard-step stepTitle="" class="col-6 step-container">
+            <h4 class="neon-wizard-header flex1">Vous souhaitez faire briller un projet</h4>
+
+                  <div class="neon-wizard-btn-container flex3 ">
+            <button type="button" class="form-btn  col-5" (click)="onCompleteStep(0, 'text', null)" awNextStep>Professionnel</button>
+            <button type="button" class="form-btn  col-5" (click)="onCompleteStep(0, 'image', null)" awNextStep>Image standard</button>
+        </div>
+  
+        
+         </aw-wizard-step>
+         
          <div class="col-2"></div>
   </div>
  
