added form as custom element

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div class="bigBox">
+<!-- <div class="bigBox">
         <app-form-header></app-form-header>
         <app-neon-form></app-neon-form>
 </div>
+ -->
