--- a/src/styles.scss
+++ b/src/styles.scss
@@ -71,3 +71,14 @@
 .nmt {
   margin-top: 0 !important;
 }
+
+.mb5 {
+  margin-bottom: 5% !important;
+}
+
+.mb3 {
+  margin-bottom: 1.5% !important;
+}
+.mt5 {
+  margin-top: 5% !important;
+}
