--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -37,7 +37,7 @@ justify-content: flex-start;
     align-self: center;
 }
 .basic-input {
-    background-color: #D5D5D5;
+    background-color: #F4F4F4;
     color:  #000B31;
     height: 35px;
     border-radius: 25px;
@@ -49,7 +49,7 @@ justify-content: flex-start;
     outline: none;
 }
 .large-input {
-    background-color: #D5D5D5;
+    background-color: #F4F4F4;
     color:  #000B31;
     min-height: 50px;
     border-radius: 15px;
@@ -82,7 +82,7 @@ justify-content: flex-start;
 }
 .illustration {
     border-radius: 15px;
-    background-color: #D5D5D5;
+    background-color: #F4F4F4;
     text-align: center;
     height: 40%;
     display: flex;
@@ -94,6 +94,7 @@ justify-content: flex-start;
 .neon-wizard-btn-container {
     display: flex;
         justify-content: space-around;
+        flex: 2;
 }
 .flex3 {
     flex:3;
@@ -104,7 +105,7 @@ justify-content: flex-start;
 .form-btn {
 height: 100px;
 border: none;
-
+    // align-self: flex-end;
 font-family: Mukta-Bold, sans-serif;
 font-size: 1.5em;
 border-radius: 10px;
@@ -135,7 +136,7 @@ display: none !important;
     width: 30%;
     border-radius: 15px;
     height: 100px;
-    background-color: #D5D5D5;
+    background-color: #F4F4F4;
     cursor: pointer;
 }
 .form-style-container-small {
@@ -150,7 +151,7 @@ display: none !important;
     width: 45%;
     border-radius: 15px;
     height: 10vh;
-    background-color: #D5D5D5;
+    background-color: #F4F4F4;
     cursor: pointer;
     text-align: center;
 }
@@ -172,7 +173,7 @@ display: none !important;
         line-height: 0;
         border-radius: 50%;
         background-size: cover;
-        background-color: #D5D5D5;
+        background-color: #F4F4F4;
         margin: 5px	;
         background-position: 50%;
         text-align: center;
@@ -287,7 +288,7 @@ input[type="checkbox"].ios-switch:checked + div > div {
         }
         .inner-circle {
           border-radius: 100%;
-          background: #D5D5D5;
+          background: #F4F4F4;
           text-decoration: none;
           position: absolute;
           top: 0;
