--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@
         font-family: Mukta-Bold, sans-serif;
         cursor: pointer;
         max-height: 35px;
+        align-self: flex-end;
 
         letter-spacing: 0.4px;
         border: none;
@@ -49,6 +50,7 @@
     font-family: Mukta-Bold, sans-serif;
     cursor: pointer;
     letter-spacing: 0.4px;
+    align-self: flex-end;
     border-radius: 45px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s; 
