--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
         <app-neon-form></app-neon-form>
 </div>
  -->
- <app-neon-form></app-neon-form>
+ <!-- <app-neon-form></app-neon-form> -->
+<app-neon-list></app-neon-list>
