--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -1,3 +1,103 @@
-<p>
-  neon-list works!
-</p>
+<div  *ngIf="!neonSelected" class="ec-bigbox">
+  <div class="row ec-top-row">
+    <div class="col-4 ec-petit-prince"></div>
+    <div class="col-1"></div>
+    <div class="col-7">
+      <div class='ec-list-title'>
+        <h2 class="ec-title">Tous vos néons</h2>
+        <button class="prev-btn">Créer un nouveau dessin</button>
+      </div>
+  
+      <div class="ec-list-cont">
+        <table>
+          <thead>
+            <tr>
+              <th style="padding-left: 5%;">Vos dessins techniques</th>
+      
+              <th >Etat</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr (click)="goToNeonDetail({id: 1, name: 'money', state: 'design_inprocess'})">
+              <td data-column="Vos dessins techniques"><div class="table-position-circle">1</div>Money</td>
+              <td data-column="Etat">En cours de design</td>
+            </tr>
+            <tr (click)="goToNeonDetail({id: 2, name: 'sweet orange', state: 'maquette'})">
+              <td data-column="Vos dessins techniques"><div class="table-position-circle">2</div>Sweet Orange</td>
+              <td data-column="Etat">En attente de maquette</td>
+            </tr>
+            <tr (click)="goToNeonDetail({id: 2, name: 'tamas', state: 'delivery_inprocess'})">
+              <td data-column="FVos dessins techniques"><div class="table-position-circle">3</div>Tamas</td>
+              <td data-column="Etat">Livraison en cours</td>
+            </tr>
+            <tr (click)="goToNeonDetail({id: 4, name: 'Libérez Karim', state: 'failed'})">
+              <td data-column="Vos dessins techniques"><div class="table-position-circle">4</div>Libérez Karim</td>
+              <td data-column="Etat">Paiement frauduleux</td>
+            </tr>
+  
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+  </div>
+  <div class="row ec-bottom-row">
+    <div class="cards-list">
+  
+      <div class="card 1">
+       <div class="card_image">
+
+       </div>
+       <div class="card_content">
+        <span class="ec-card-title">
+          Paiement sécurisé
+
+        </span>
+        <span class="ec-card-descr">
+          Les paiements sur notre site sont sécurisés. Nous acceptons tous les paiement dont Visa, Master Card, Amex, Paypal et Maestro.
+        </span>
+
+      </div>
+      </div>
+      
+        <div class="card 2">
+          <div class="card_image">
+
+          </div>
+          <div class="card_content">
+           <span class="ec-card-title">
+             Livraison
+           </span>
+           <span class="ec-card-descr">
+             Nous vous livrons dans un délai de deux à trois semaines, selon la production et la destination. En cas de demande urgente merci de nous contacter directement afin de procéder à une "Commande express"
+           </span>
+   
+         </div>
+      </div>
+      
+      <div class="card 3">
+        <div class="card_image">
+
+        </div>
+        <div class="card_content">
+         <span class="ec-card-title">
+           Garantie
+         </span>
+         <span class="ec-card-descr">
+           Tous nos néons possèdent une garantie d'un an à compter de la data d'achat. Si vous devez retourner un article défectueux, veuillez 
+           nous contacter avec votre numéro de commande et les détails concernant le produit que vous souhaitez retourner !
+         </span>
+ 
+       </div>
+      </div>
+        
+        
+      
+      </div>
+  </div>
+</div>
+
+
+<div *ngIf="neonSelected" class='ec-bigbox'>
+  <button class="prev-btn" (click)="neonSelected = null">Précédent</button>
+</div>
