--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,7 @@
     // min-width: 140px;
     border-radius: 25px;
     color: black;
-    background-color: whitesmoke;
+    background-color: transparent;
     outline: none !important;
     min-height: 35px;
     max-height: 35px;
