--- a/src/app/neon-list/neon-list.component.html
+++ b/src/app/neon-list/neon-list.component.html
@@ -18,19 +18,19 @@
             </tr>
           </thead>
           <tbody>
-            <tr (click)="goToNeonDetail({id: 1, name: 'money', state: 'design_inprocess'})">
+            <tr (click)="goToNeonDetail({id: 1, name: 'money', typo: 'Las Vegas', colors:'Vert kaki', height:'35cm' ,  price: 500, state: 'design_inprocess'})">
               <td data-column="Vos dessins techniques"><div class="table-position-circle">1</div>Money</td>
               <td data-column="Etat">En cours de design</td>
             </tr>
-            <tr (click)="goToNeonDetail({id: 2, name: 'sweet orange', state: 'maquette'})">
+            <tr (click)="goToNeonDetail({id: 2, name: 'sweet orange', typo: 'Marmelade', colors:'Bah orange', height:'25cm' ,  price: 333,state: 'maquette'})">
               <td data-column="Vos dessins techniques"><div class="table-position-circle">2</div>Sweet Orange</td>
               <td data-column="Etat">En attente de maquette</td>
             </tr>
-            <tr (click)="goToNeonDetail({id: 2, name: 'tamas', state: 'delivery_inprocess'})">
+            <tr (click)="goToNeonDetail({id: 2, name: 'tamas', typo: 'Arial New Roman', colors:'Violet', height:'45cm' , price: 410, state: 'delivery_inprocess'})">
               <td data-column="FVos dessins techniques"><div class="table-position-circle">3</div>Tamas</td>
               <td data-column="Etat">Livraison en cours</td>
             </tr>
-            <tr (click)="goToNeonDetail({id: 4, name: 'Libérez Karim', state: 'failed'})">
+            <tr (click)="goToNeonDetail({id: 4, name: 'Libérez Karim', typo: 'Arabica sans serif', colors:'Marron', height:'1.4cm' , price: 100000, state: 'failed'})">
               <td data-column="Vos dessins techniques"><div class="table-position-circle">4</div>Libérez Karim</td>
               <td data-column="Etat">Paiement frauduleux</td>
             </tr>
@@ -98,12 +98,12 @@
 </div>
 
 
-<div *ngIf="neonSelected" class='ec-bigbox'>
+<div *ngIf="neonSelected" class='ec-bigbox-detail'>
     <button  style="margin-bottom: 1.5%;" class="prev-btn" (click)="neonSelected = null">Précédent</button>
 
   <h2  style="margin-bottom: 3%;">Néon LED "{{neonSelected.name}}"</h2>
 
-  <div class="ec-top-row row">
+  <div class="ec-top-row-detail row">
     <div class="col-8 neon-canvas-cont">
       <div class="neon-canvas"></div>
       <div class="neon-bar">
@@ -121,12 +121,127 @@
       </div>
 
     </div>
-    <div class="col-1"></div>
-    <div class="col-3">
+    <div class="col-4">
+        <table>
+            <thead>
+              <tr>
+                <th class='detail-configu-title'>Configuration</th>
+                <th class='detail-configu-title'></th>
 
+              </tr>
+            </thead>
+            <tbody>
+              <tr >
+                <td  style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Texte</td>
+                <td style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.name}}</td>
+              </tr>
+              <tr >
+                <td style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Typographie</td>
+                <td style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.typo}}</td>
+              </tr>
+              <tr >
+                <td  style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Couleurs</td>
+                <td style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.colors}}</td>
+              </tr>
+              <tr >
+                <td  style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Hauteur</td>
+                <td  style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.height}}</td>
+              </tr>
+              <tr >
+                  <td  style="font-family: Mukta-Bold;" data-column="Vos dessins techniques">Etat</td>
+                  <td  style="font-family: Mukta-Regular;" data-column="Etat">{{neonSelected.state}}</td>
+                </tr>
+      
+            </tbody>
+          </table>
+
+          <div class="neon-tarif-cont">
+            <div class="neon-tarif">
+              <span class="neon-tarif-price">Tarif: {{neonSelected.price}}$</span>
+              <span class="neon-tarif-blabla">Livraison incluse </span>
+
+            </div>
+            <button  style="margin-right: 5%; padding-left: 25px; padding-right: 25px;" class="next-btn">Commander</button>
+          </div>
     </div>
 
   </div>
-  <div class="ec-bottom-row row"></div>
+  <div style="margin-top: 10%;" class="ec-bottom-row row">
+      <h1 class="ec-title">Un service sûr et complet</h1>
+
+      <div class="cards-list">
+  
+          <div class="little-card  card-tarace 1">
+           <!-- <div class="card_image">
+    
+           </div> -->
+           <div class="card_content">
+            <span class="ec-card-title">
+              Paiement sécurisé
+    
+            </span>
+            <span class="ec-card-descr">
+              Les paiements sur notre site sont sécurisés. Nous acceptons tous les paiement dont Visa, Master Card, Amex, Paypal et Maestro.
+            </span>
+    
+          </div>
+          </div>
+
+          <div class="little-card  card-tarace 2">
+           <!-- <div class="card_image">
+    
+           </div> -->
+           <div class="card_content">
+            <span class="ec-card-title">
+              Garantie un an
+    
+            </span>
+            <span class="ec-card-descr">
+              Tous nos néons posèdent une garantie d'un an à compter de la data d'achat. Vous devez retourner un article défectueux ? Contactez-nous avec le numéro de commande !
+            </span>
+    
+          </div>
+          </div>
+
+          
+          <div class="little-card  card-tarace 3">
+              <!-- <div class="card_image">
+       
+              </div> -->
+              <div class="card_content">
+               <span class="ec-card-title">
+                 Livraison offerte
+       
+               </span>
+               <span class="ec-card-descr">
+                 Nous vous offrons la livraison pour chaque néon commandé.
+               </span>
+       
+             </div>
+             </div>
+
+             
+          <div class="little-card  card-tarace 4">
+              <!-- <div class="card_image">
+       
+              </div> -->
+              <div class="card_content">
+               <span class="ec-card-title">
+                  Livré sous 15 jours
+       
+               </span>
+               <span class="ec-card-descr">
+                 Nous livrons dans un délai de 15 jours selon la production et la destination. En cas de demande urgente merci de nous contacter directement
+                 afin de procéder à une "Livraison express"
+               </span>
+       
+             </div>
+             </div>
+
+
+
+          
+          </div>
+  </div>
 
 </div>
